Adjusted overlay dimensions to ensure that it always covers the mainblock

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 .App {
   text-align: center;
-  height: 20vh;
+  height: 10vh;
 }
 
 .Content {
   margin: 0;
-  height: 60vh;
+  height: 90vh;
   display: grid;
   place-items: center;
 }
