--- a/src/components/MainBlock/MainBlock.css
+++ b/src/components/MainBlock/MainBlock.css
@@ -1,4 +1,5 @@
 .MainBlock {
+    position: relative;
     width: 600px;
     outline: 1px solid black;
     border-radius: 20px;
@@ -40,18 +41,33 @@
     box-shadow: none !important;
 }
 
-.Overlay {
-  position: fixed;
-  top: 0; left: 0; right: 0; bottom: 0;
-  background: rgba(0,0,0,0.5);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1000;
-}
 .OverlayContent {
-  background: white;
-  padding: 2rem;
-  border-radius: 8px;
-  text-align: center;
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: white;
+    outline: 1px solid black;
+    border-radius: 20px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.Button {
+    border: 1px solid black;
+    border-radius: 20px;
+
+    height: 40px;
+    width: 70px;
+
+    padding: 0px 20px 0px 20px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.Button:hover {
+    box-shadow: 5px 5px 5px 1px rgba(0, 0, 0, 0.1);
 }
